--- a/src/App.css
+++ b/src/App.css
@@ -112,11 +112,8 @@ button:hover {
   color: #61dafb;
 }
 
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+.App-logo {
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+}
