--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,7 @@ button:hover {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(20px + 2vmin);
   color: #D99E30;
 }
 
@@ -187,6 +187,22 @@ button:hover {
   width: 100%;
 }
 
+.leftFooterBorder {
+  border-left: 1px solid #0B8C8C;
+  padding-left: 10px;
+}
+
+.footerIcon {
+  height: 50px;
+  margin: 0 10px;
+}
+
+/*portfolio page */
+.portfolioIcon {
+  height: 40px;
+  margin: 0 10px;
+}
+
 /* contact form */
 form {
   margin-top: 20px;
@@ -263,3 +279,35 @@ flex-wrap: wrap;
   background-color: #D99E30;
   color:#F2ECCE;
 }
+
+.ResumePage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  /* height: 100vh;
+  width: 100vw; */
+  background-color: #594234;
+  /* font-size: calc(10px + 2vmin);
+  color: #D99E30; */
+}
+
+.ResumeTitle {
+  display: flex;
+  align-items: center;
+  font-size: calc(20px + 2vmin);
+  color: #D99E30;
+}
+
+.ResumeLink {
+  display: flex;
+  font-size: calc(10px + 2vmin);
+  color: #D9411E;
+  text-decoration: underline;
+}
+
+/*errorSpan */
+#errorSpan {
+  color:#D9411E;
+}
+
