added my picture to about me, removed extra code.

--- a/src/App.css
+++ b/src/App.css
@@ -318,3 +318,8 @@ flex-wrap: wrap;
   color:#D9411E;
 }
 
+.myPhoto {
+  border-radius: 10px 100px / 120px;
+  border: 5px solid #D99E30;
+  width: 200px;
+}
